[tool.poetry]
name = "api-pulumi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
batch-debugging = "^0.1.4"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
