[tool.poetry]
name = "api-pulumi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
batch-debugging = "0.1.6"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
jinja2 = "^3.1.3"
sqlmodel = "^0.0.16"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
